[refactor]: backend code has been moved to TS
All backend code has been migrated to Typescript.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "ecommerce-backend",
+  "name": "scalar-e-commerce-backend",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "Creating a basic / example server using express and nodejs",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev:build": "tsc -w",
+    "dev:run": "nodemon build/index.js",
+    "dev": "concurrently npm:dev:*"
   },
   "keywords": [],
-  "author": "Kunal",
+  "author": "",
   "license": "ISC",
-  "description": "Creating a basic / example server using express and nodejs",
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-session": "^2.0.48",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
+    "reflect-metadata": "^0.2.1",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^9.4.0",
-    "nodemon": "^3.1.2"
-  },
-  "volta": {
-    "node": "20.13.1"
   }
 }
