--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cookie-session": "^2.0.48",
@@ -26,16 +27,19 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-controller": "file:../express-controller",
+    "express-mongo-sanitize": "^2.2.0",
     "googleapis": "^140.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.14",
+    "rate-limit-express": "^2.2.2",
     "reflect-metadata": "^0.2.1",
     "uuid": "^9.0.1"
   }
